[gd_scene load_steps=2 format=3 uid="uid://cxmfp4h2n8r1g"]

[ext_resource type="Script" path="res://scripts/ui/parts_inventory_ui.gd" id="1"]

[node name="PartsInventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "PARTS INVENTORY"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBox/Header"]
layout_mode = 2
text = "Close"

[node name="Content" type="TabContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecoveredParts" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox/Content/RecoveredParts"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "RECOVERED PARTS (Decaying):"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox/Content/RecoveredParts"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartsVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/RecoveredParts/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Freezer" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15
metadata/_tab_index = 1

[node name="LockedPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/Freezer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/Freezer/LockedPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox/Content/Freezer/LockedPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "❄️ FREEZER - LOCKED"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="Panel/MarginContainer/VBox/Content/Freezer/LockedPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Defeat 100 waves to unlock the freezer and preserve parts indefinitely"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="Panel/MarginContainer/VBox/Content/Freezer/LockedPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Progress: 0/100 waves"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Panel/MarginContainer/VBox/Content/Freezer/LockedPanel/VBox"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_horizontal = 4
max_value = 100.0

[node name="UnlockButton" type="Button" parent="Panel/MarginContainer/VBox/Content/Freezer/LockedPanel/VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "LOCKED - 100 more waves"

[node name="UnlockedPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/Freezer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer/VBox/Content/Freezer/UnlockedPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox/Content/Freezer/UnlockedPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "FREEZER (Level 1): ❄️ 0/5 slots"
horizontal_alignment = 1

[node name="UpgradeButton" type="Button" parent="Panel/MarginContainer/VBox/Content/Freezer/UnlockedPanel/VBox"]
layout_mode = 2
text = "UPGRADE TO LEVEL 2: 1,500g (+5 slots)"

[node name="SlotsGrid" type="GridContainer" parent="Panel/MarginContainer/VBox/Content/Freezer/UnlockedPanel/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Footer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
alignment = 2

[node name="FreezeAllButton" type="Button" parent="Panel/MarginContainer/VBox/Footer"]
layout_mode = 2
text = "Freeze All Recovered Parts"
